<resources>
    <string name="app_name">Gank</string>
    <string name="action_settings">Settings</string>
    <string name="writer">writer</string>
    <string name="create_date">yesterday</string>
    <string name="delimiter_dot">·</string>
    <string name="source">Web</string>
    <string name="title">这是一篇文章的标题，字数很多，标题很长很长很长</string>
    <string name="network_poor">网络异常</string>
    <string name="click_to_refresh_network">点击刷新干货</string>
    <string name="submit_success">提交干货成功</string>
    <string name="load_failed">加载干货失败了</string>
    <string name="header">header</string>

    <!--About Page-->
    <string name="about">关于</string>

    <string name="about_description_text">
        干货\n
        <br/>
        本App中所有数据均来自<a href="http://gank.io">干货集中营</a>\n
        <br/>
        icon由<a href="icons8.com">icons8</a>提供
    </string>
    <string name="versionName">版本号 </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="daily">Daily</string>
    <string name="video">休息视频</string>
    <string name="bonus">福利</string>
    <string name="resources">拓展资源</string>
    <string name="web">前端</string>


</resources>
